Thu Aug  1 11:13:46 1996  Ezra Peisach  <epeisach@dumpster.rose.brandeis.edu>

	* configure.in (withval): Link -ldyn as it is needed by the kadm5
		shared library.  

Tue Jul 23 22:26:29 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in: Build logger.o from the libkadm5 directory.  This
 		is prepatory work towards eliminating the dependency on
 		libkadm5.  Ultimately we will probably need to rethink how
		the library structure for krb5....

	* configure.in: Add -lgssapi and -lgssrpc to libraries linked with
 		krb5kdc since they are needed for shared libraries.  This
 		is a horrible hack....

Thu Jun 13 22:09:34 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES

Sun Jun  9 23:03:06 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* main.c (finish_realm): Do not invoke krb5_finish_key if
		encryption block is not set.

Sun May 12 01:17:05 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in: USE_KADM_LIBRARY replaced by USE_KADMSRV_LIBRARY

Tue May  7 18:19:59 1996  Ken Raeburn  <raeburn@cygnus.com>

	Thu May  2 22:52:56 1996  Mark Eichin  <eichin@cygnus.com>

	* kdc_util.c (kdc_process_tgs_req): call
	krb5_rd_req_decoded_anyflag instead of krb5_rd_req_decoded, so
	that invalid tickets can be used to validate themselves. Add
	explicit check that if the ticket is TKT_FLG_INVALID, then
	KDC_OPT_VALIDATE was requested.

Mon May  6 12:15:36 1996  Richard Basch  <basch@lehman.com>

	* main.c: Fixed various abstraction violations where the code knew
	the internals of eblock->crypto_entry.

Wed Feb 28 13:07:28 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* main.c: Move com_err.h after k5-int.h include.

Tue Feb 27 17:33:44 1996  Richard Basch  <basch@lehman.com>

	* main.c:
	Do not repeat random number generator initializations, as memory
	is allocated and never reclaimed.  Also fixed the V4 random number
	generator initialization (a DES_CBC_CRC random number is generated