@@ -38,15 +38,15 @@
  * the wheel is hidden.
  */
 
-int  encode_v4tkt PROTOTYPE((KTEXT_ST *, char *, int *)),
-     encode_ktext PROTOTYPE((char **, int *, KTEXT_ST *)),
-     encode_bytes PROTOTYPE((char **, int *, char *, int)),
-     encode_int32 PROTOTYPE((char **, int *, krb5_int32 *));
+int  encode_v4tkt KRB5_PROTOTYPE((KTEXT_ST *, char *, int *)),
+     encode_ktext KRB5_PROTOTYPE((char **, int *, KTEXT_ST *)),
+     encode_bytes KRB5_PROTOTYPE((char **, int *, char *, int)),
+     encode_int32 KRB5_PROTOTYPE((char **, int *, krb5_int32 *));
 
-int  decode_v4tkt PROTOTYPE((KTEXT_ST *, char *, int *)),
-     decode_ktext PROTOTYPE((char **, int *, KTEXT_ST *)),
-     decode_bytes PROTOTYPE((char **, int *, char *, int)),
-     decode_int32 PROTOTYPE((char **, int *, krb5_int32 *));
+int  decode_v4tkt KRB5_PROTOTYPE((KTEXT_ST *, char *, int *)),
+     decode_ktext KRB5_PROTOTYPE((char **, int *, KTEXT_ST *)),
+     decode_bytes KRB5_PROTOTYPE((char **, int *, char *, int)),
+     decode_int32 KRB5_PROTOTYPE((char **, int *, krb5_int32 *));
 
 int encode_bytes(out, outlen, in, len)
      char **out;
